# src/api/services/recipe.service.ts
@@ -1,5 +1,7 @@
+import mongoose from 'mongoose';
 import { Recipe } from '../model/recipe';
 import RecipeStore from '../schema/recipe.schema';
+import { Ingredient } from '../model/ingredient';
 
 export class RecipeService {
 
@@ -14,56 +16,87 @@ export class RecipeService {
         }));
     }
 
+    public async getRecipeById(recipeId: string): Promise<Recipe | undefined> {
+
+        const recipe = await RecipeStore.findById(recipeId);
+
+        if (recipe) {
+            return {
+                id: recipe._id,
+                name: recipe.name,
+                ingredients: recipe.ingredients,
+                instructions: recipe.instructions
+            };
+        }
+
+        return undefined;
+    }
+
+    public async deleteRecipeById(recipeId: string): Promise<void> {
+        await RecipeStore.deleteOne({ _id: new mongoose.Types.ObjectId(recipeId) });
+    }
+
+    public async create(recipe: Recipe): Promise<Recipe> {
+        const newRecipe = new RecipeStore({
+            name: recipe.name,
+            ingredients: recipe.ingredients,
+            instructions: recipe.instructions
+        });
+
+        const savedRecipe = await newRecipe.save();
+
+        return {
+            id: savedRecipe._id,
+            name: savedRecipe.name,
+            ingredients: savedRecipe.ingredients,
+            instructions: savedRecipe.instructions
+        };
+    }
+
+    public async update(recipeId: string, recipe: Recipe): Promise<Recipe | undefined> {
+
+        const updatedRecipe = await RecipeStore.findByIdAndUpdate(new mongoose.Types.ObjectId(recipeId), {
+            name: recipe.name,
+            ingredients: recipe.ingredients,
+            instructions: recipe.instructions
+        }, { new: true });
+
+        if (updatedRecipe) {
+            return {
+                id: updatedRecipe._id,
+                name: updatedRecipe.name,
+                ingredients: updatedRecipe.ingredients,
+                instructions: updatedRecipe.instructions
+            };
+        }
+
+        return undefined;
+    }
+
+    public async getShoppingList(recipeIds: string[]): Promise<Ingredient[]> {
+
+        const objectIds = recipeIds.map(id => new mongoose.Types.ObjectId(id));
+
+        const shoppingList = await RecipeStore.aggregate([
+            { $match: { _id: { $in: objectIds }, is_deleted: false } },
+            { $unwind: "$ingredients" },
+            {
+                $group: {
+                    _id: "$ingredients.name",
+                    quantity: { $sum: "$ingredients.quantity" },
+                    unit: { $first: "$ingredients.unit" }
+                }
+            },
+            {
+                $project: {
+                    _id: 0,
+                    name: "$_id",
+                    quantity: 1,
+                    unit: 1
+                }
+            }
+        ]);
+
+        return shoppingList;
+    }
 }
-
-// const router = express.Router();
-
-
-// router.post('/recipes', async (req: Request, res: Response) => {
-//     const recipe = new Recipe({
-//         name: req.body.name,
-//         ingredients: req.body.ingredients,
-//         instructions: req.body.instructions
-//     });
-
-//     try {
-//         const savedRecipe = await recipe.save();
-//         res.json(savedRecipe);
-//     } catch (err) {
-//         res.json({ message: err });
-//     }
-// });
-
-
-// router.get('/recipes', async (req: Request, res: Response) => {
-
-//     console.log('get recipes');
-//     try {
-//         const recipes = await Recipe.find({});
-//         console.log(recipes);
-//         res.json(recipes);
-//     } catch (err) {
-//         console.log(err);
-//         res.json({ message: err });
-//     }
-// });
-
-
-// router.get('/recipes/:recipeId', async (req: Request, res: Response) => {
-//     try {
-//         const recipe = await Recipe.findById(req.params.recipeId);
-//         res.json(recipe);
-//     } catch (err) {
-//         res.json({ message: err });
-//     }
-// });
-
-
-// router.delete('/recipes/:recipeId', async (req: Request, res: Response) => {
-//     try {
-//         const removedRecipe = await Recipe.deleteOne({ _id: req.params.recipeId });
-//         res.json(removedRecipe);
-//     } catch (err) {
-//         res.json({ message: err });
-//     }
-// });
